# flowwisper

./: .gitignore  AGENTS.md  README.md  crash-1760266213721-55770.json  package-lock.json  rustup-init
.ai-dev-tasks/: process-task-list.md
.iflow/: IFLOW.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/public/: index.html
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  history.rs  hotkey.rs  lib.rs  main.rs  native_probe.rs  session.rs
apps/desktop/src/features/transcription/: DualViewPanel.integration.test.tsx  DualViewPanel.test.tsx  DualViewPanel.tsx  NoiseBanner.tsx  RecordingOverlay.test.tsx  SilenceCountdown.tsx  styles.css
apps/desktop/src/features/transcription/hooks/: useDualViewTranscript.test.ts  useDualViewTranscript.ts  useSessionEvents.ts
apps/desktop/src/lib/: history.test.ts  history.ts
apps/desktop/src/test/: setup.ts
core/: Cargo.toml  README.md  build.rs
core/src/: basic_test.rs  dirs_compat.rs  lib.rs  main.rs
core/src/audio/: mod.rs  noise.rs
core/src/orchestrator/: config.rs  constants.rs  engine.rs  mod.rs  traits.rs  types.rs
core/src/orchestrator/engine/: whisper.rs
core/src/orchestrator/runtime/: handle.rs  mod.rs  state.rs  util.rs  worker.rs
core/src/orchestrator/tests/: runtime.rs
core/src/persistence/: mod.rs  sqlite.rs  tests.rs
core/src/session/: clipboard.rs  history.rs  lifecycle.rs  mod.rs  publisher.rs
core/src/session/publisher/: automation.rs  engine.rs  error.rs  mod.rs  tests.rs  types.rs
core/src/telemetry/: events.rs  mod.rs
docs/: architecture.md  large-file-refactor-plan.md  microphone_permission_flow.md  review_feedback.md  uc21_review_gaps.md  uc21_review_round10.md  uc21_review_round11.md  uc21_review_round12.md  uc21_review_round13.md  uc21_review_round14.md  uc21_review_round15.md  uc21_review_round16.md  uc21_review_round17.md  uc21_review_round18.md  uc21_review_round19.md  uc21_review_round20.md  uc21_review_round21.md  uc21_review_round22.md  uc21_review_round23.md  uc21_review_round5.md  uc21_review_round6.md  uc21_review_round7.md  uc21_review_round8.md  uc21_review_round9.md  voice_fn_transcriber_prd.md  voice_fn_transcriber_prd_review.md  voice_fn_transcriber_wireflow.md
docs/large-file-refactor/: core-orchestrator.md  core-session-publisher.md
docs/onboarding/: dual_view_release_checklist.md  dual_view_transcript.md  local_history_runbook.md
docs/releases/: uc2_5-noise-detection.md
docs/sprint/: sprint1.md  sprint1_uc1.3_po_review.md  sprint1_uc1.3_review.md  sprint1_uc1_3_po_todo.md  sprint2.md  sprint3.md  sprint4.md
infra/: README.md
scripts/: build_all.sh
services/admin_console/: README.md  package-lock.json  package.json  styles.css  styles.module.css
services/admin_console/pages/: _app.tsx  index.tsx
services/api_gateway/: README.md  pyproject.toml
services/api_gateway/flowwisper_api/: __init__.py  config.py  main.py
services/api_gateway/flowwisper_api/routers/: sessions.py
services/api_gateway/tests/: test_smoke.py
services/hybrid_router/: README.md  go.mod  main.go
tasks/: 0001-prd-uc2.2-dual-view.md  0002-prd-uc2.3-session-completion.md  0003-prd-uc2.4-local-history.md  0004-prd-uc2.5-noise-detection.md  tasks-0001-prd-uc2.2-dual-view.md  tasks-0002-prd-uc2.3-session-completion.md  tasks-0003-prd-uc2.4-local-history.md  tasks-0004-prd-uc2.5-noise-detection.md  tasks-0007-large-files-refactor.md
tests/qa/: uc2_5_noise_autostop.md
