[package]
name = "flowwisper-core"
version = "0.1.0"
edition = "2021"
description = "Flowwisper Core Service - 守护进程脚手架"
license = "MIT"
authors = ["Flowwisper Team"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
whisper-rs = { version = "0.11", optional = true }

[features]
default = ["local-asr"]
local-asr = ["whisper-rs"]
cloud-asr = []

[dev-dependencies]
tempfile = "3"
