[package]
name = "flowwisper-core"
version = "0.1.0"
edition = "2021"
description = "Flowwisper Core Service - 守护进程脚手架"
license = "MIT"
authors = ["Flowwisper Team"]
build = "build.rs"

[lib]
name = "flowwisper_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
dirs = "5"
whisper-rs = { version = "0.11", optional = true }

[dependencies.r2d2]
version = "0.8"
optional = true

[dependencies.r2d2_sqlite]
version = "0.21"
optional = true

[dependencies.rusqlite]
version = "0.28"
features = ["bundled-sqlcipher", "unlock_notify", "chrono", "array"]
optional = true

[features]
default = ["local-asr", "sqlcipher-persistence"]
local-asr = ["whisper-rs"]
cloud-asr = []
sqlcipher-persistence = ["rusqlite", "r2d2", "r2d2_sqlite"]
whisper-rs = ["dep:whisper-rs"]

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
whisper-rs-sys = { path = "../vendor/whisper-rs-sys" }
