 [build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowwisper-api-gateway"
version = "0.1.0"
description = "Flowwisper API 网关脚手架"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flowwisper_api*", "tests"]

[tool.uvicorn]
app = "flowwisper_api.main:app"
host = "0.0.0.0"
port = 8080
reload = true
