[package]
name = "flowwisper-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "flowwisper_desktop"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flowwisper-desktop"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
once_cell = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }
rdev = "0.5"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "1"
nnnoiseless = { version = "0.5", default-features = false }
dirs = "5"
flowwisper-core = { path = "../../../core", default-features = false, features = ["sqlcipher-persistence"] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
io-kit-sys = "0.3"
mach = "0.3"
karabiner-driverkit = "0.2"
security-framework = "2"
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_Time",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Media_Capture",
    "Foundation",
] }
windows-dpapi = "0.1"

[build-dependencies]
tauri-build = { version = "2" }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[patch.crates-io]
karabiner-driverkit = { path = "../../../vendor/karabiner-driverkit" }
